<?xml version="1.0"?>
<package format="3">
  <name>warehouse_robot_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>warehouse_robot_navigation</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
