<?xml version="1.0"?>
<package format="3">
  <name>warehouse_robot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo worlds and simulation config</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>warehouse_robot_description</depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
